--- a/config/database.yml
+++ b/config/database.yml
@@ -18,6 +18,10 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  username: <%= Rails.application.credentials[:db][:username] %>
+  password: <%= Rails.application.credentials[:db][:password] %>
+  host: <%= Rails.application.credentials[:db][:host] %>
+  port: <%= Rails.application.credentials[:db][:port] %>
 
 
 development:
