[Fix] Clean up + add readme

--- a/test/fixtures/flashcards.yml
+++ b/test/fixtures/flashcards.yml
@@ -1,5 +1,24 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
+# == Schema Information
+#
+# Table name: flashcards
+#
+#  id         :bigint           not null, primary key
+#  answer     :text
+#  question   :text
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#  deck_id    :bigint           not null
+#
+# Indexes
+#
+#  index_flashcards_on_deck_id  (deck_id)
+#
+# Foreign Keys
+#
+#  fk_rails_...  (deck_id => decks.id)
+#
 one:
   question: MyText
   answer: MyText
